<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_baseline_apps_24"
        android:shortcutDisabledMessage="@string/lable_shortcut_static_search_disable"
        android:shortcutId="app_manager"
        android:shortcutLongLabel="@string/lable_shortcut_static_search_long"
        android:shortcutShortLabel="@string/lable_shortcut_static_search_short">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.android.systemfunction.ui.APPManagerActivity"
            android:targetPackage="com.android.systemfunction" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:shortcutDisabledMessage="@string/activity_log"
        android:shortcutId="static2"
        android:shortcutLongLabel="@string/activity_log"
        android:shortcutShortLabel="@string/activity_log">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.android.systemfunction.ui.Logger"
            android:targetPackage="com.android.systemfunction" />
    </shortcut>

</shortcuts>